# AiGitDesign

./: 0备份README.md  README.md  pyproject.toml
docs/skill-tests/: 2026-07-12-tracking-ai-code-contributions.md
docs/superpowers/plans/: 2026-07-12-ai-code-contribution-tracking.md
skills/tracking-ai-code-contributions/: SKILL.md
skills/tracking-ai-code-contributions/agents/: openai.yaml
skills/tracking-ai-code-contributions/references/: recorder-contract.md
src/aigit/: __init__.py  canonical.py  classifier.py  cli.py  domain.py  git_state.py  local_store.py  observer.py  process.py  prompt_evidence.py  recorder.py
tests/integration/: test_git_state.py  test_observer.py  test_recorder_cli.py
tests/unit/: test_classifier.py  test_domain.py  test_local_store.py  test_recorder_reliability.py
